--- a/.github/workflows/creat-list.yml
+++ b/.github/workflows/creat-list.yml
@@ -28,3 +28,10 @@ jobs:
 
     - name: Run Python script
       run: python creat-data/index_for_drive2.py
+
+    - name: Commit and push changes
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git commit -am "Add generated file"
+        git push
