--- a/.github/workflows/creat-list.yml
+++ b/.github/workflows/creat-list.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      SERVICE_ACCOUNT_JSON: ${{ secrets.SERVICE_ACCOUNT_JSON }} # Using the secret
+      SERVICE_ACCOUNT_JSON: ${{ secrets.ACCESS_KEYS_JSON }} # Using the secret
 
     steps:
     - name: Checkout repository
