--- a/.github/workflows/creat-list.yml
+++ b/.github/workflows/creat-list.yml
@@ -1,7 +1,8 @@
 name: Run Python Script
 
 on:
-  workflow_dispatch:  # Allows manual triggering
+  # workflow_dispatch:  # Allows manual triggering
+  push:
 
 
 jobs:
