--- a/.github/workflows/creat-list.yml
+++ b/.github/workflows/creat-list.yml
@@ -29,6 +29,9 @@ jobs:
 
     - name: Run Python script
       run: python creat-data/index_for_drive2.py
+      
+      env:
+        ACTIONS_STEP_DEBUG: true
 
     - name: Commit and push changes
       run: |
