--- a/.github/workflows/creat-list.yml
+++ b/.github/workflows/creat-list.yml
@@ -37,5 +37,5 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git commit -am "Add generated file"
+        git commit -am "output.csv"
         git push
