--- a/.github/workflows/creat-list.yml
+++ b/.github/workflows/creat-list.yml
@@ -37,5 +37,10 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git commit -am "output.csv"
-        git push
+        git add output.csv  # Add the file to the staging area
+        git commit -m "Add output.csv"  # Commit with a meaningful message
+        git push  # Push the changes
+        
+        
+
+
