--- a/.github/workflows/creat-list.yml
+++ b/.github/workflows/creat-list.yml
@@ -37,7 +37,7 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add output.csv  # Add the file to the staging area
+        git add -A output.csv  # Add the file to the staging area
         git commit -m "Add output.csv"  # Commit with a meaningful message
         git push https://${{ secrets.GITHUB_TOKEN }}@github.com/NHLOCAL/shir-bot.git HEAD:main  # Push changes using the token
 
