--- a/.github/workflows/creat-list.yml
+++ b/.github/workflows/creat-list.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v3
@@ -35,11 +35,11 @@ jobs:
 
     - name: Commit and push changes
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add -A output.csv  # Add the file to the staging area
-        git commit -m "Add output.csv"  # Commit with a meaningful message
-        git push https://${{ secrets.MY_TOKEN }}@github.com/NHLOCAL/shir-bot.git HEAD:main
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git add output.csv
+        git commit -m "Add output.csv"
+        git push
 
 
       env:
