--- a/.github/workflows/creat-list.yml
+++ b/.github/workflows/creat-list.yml
@@ -37,7 +37,7 @@ jobs:
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git add -a output.csv
+        git add output.csv
         git commit -m "Add output.csv"
         git push
 
