--- a/.github/workflows/creat-list.yml
+++ b/.github/workflows/creat-list.yml
@@ -1,9 +1,7 @@
 name: Run Python Script and Upload Artifact
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   run_script_and_upload:
