--- a/.github/workflows/import-csv.yml
+++ b/.github/workflows/import-csv.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         gdown --id YOUR_FILE_ID --output newsingles.csv
       env:
-        YOUR_FILE_ID: "1TMiSV0sBCPn29KDs4rkdZMxRpvWG2TvP"
+        YOUR_FILE_ID: 1TMiSV0sBCPn29KDs4rkdZMxRpvWG2TvP
 
     - name: Commit and Push
       run: |
