--- a/.github/workflows/import-csv.yml
+++ b/.github/workflows/import-csv.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Download File
       run: |
-        gdown --id YOUR_FILE_ID --output newsingles.csv
+        gdown YOUR_FILE_ID --output newsingles.csv
       env:
         YOUR_FILE_ID: 1TMiSV0sBCPn29KDs4rkdZMxRpvWG2TvP
 
