--- a/.github/workflows/import-csv.yml
+++ b/.github/workflows/import-csv.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Download File
       run: |
-        gdown YOUR_FILE_ID --output newsingles.csv
+        wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=1TMiSV0sBCPn29KDs4rkdZMxRpvWG2TvP'-O newsingles.csv
       env:
         YOUR_FILE_ID: 1TMiSV0sBCPn29KDs4rkdZMxRpvWG2TvP
 
