--- a/.github/workflows/import-csv.yml
+++ b/.github/workflows/import-csv.yml
@@ -27,7 +27,7 @@ jobs:
         file_id="1X1hSFrgrar5T8kE8pHlDbwXHoAEeRcPs"
 
         # Specify the output file name
-        output_file="output.csv"
+        output_file="output22.csv"
 
         # Download the file
         gdown "https://drive.google.com/uc?id=$file_id" -O $output_file
