--- a/.github/workflows/import-csv.yml
+++ b/.github/workflows/import-csv.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Configure Git
       run: |
-        git config user.name "NHLOCAL"
+        git config user.name "nhlocal"
         git config user.email "nh.local11@gmail.com"
       
     - name: Commit changes
