--- a/.github/workflows/import-csv.yml
+++ b/.github/workflows/import-csv.yml
@@ -41,8 +41,8 @@ jobs:
       
     - name: Commit changes
       run: |
-        git add $output_file
-        git commit -m "Add downloaded CSV"
+        git add site/
+        git commit -m "Add downloaded CSV to the 'site' folder"
       
     - name: Push changes
       run: |
