--- a/.github/workflows/import-csv.yml
+++ b/.github/workflows/import-csv.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Commit changes
       run: |
         git add -f site/
-        git commit -m "Add downloaded CSV to the 'site' folder"
+        git commit -m "Add downloaded CSV to the 'site' folder y"
       
     - name: Push changes
       run: |
