--- a/.github/workflows/import-csv.yml
+++ b/.github/workflows/import-csv.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Download CSV from Google Drive
       run: |
         # Specify the Google Drive file ID for your CSV
-        file_id="1X1hSFrgrar5T8kE8pHlDbwXHoAEeRcPs"
+        file_id="1DXYTtzUVVxWSu9wDBjNDZW5YrLKJtiWL"
 
         # Specify the output file name
         output_file="output23.csv"
@@ -42,7 +42,7 @@ jobs:
     - name: Commit changes
       run: |
         git add -f site/
-        git commit -m "Add downloaded CSV to the 'site' folder y"
+        git commit -m "Add downloaded CSV to the 'site' folder"
       
     - name: Push changes
       run: |
