--- a/.github/workflows/import-csv.yml
+++ b/.github/workflows/import-csv.yml
@@ -2,7 +2,7 @@ name: Download CSV from Google Drive
 
 on:
   schedule:
-    - cron: '04 10 * * *'
+    - cron: '08 10 * * *'
 
 jobs:
   download:
@@ -41,7 +41,7 @@ jobs:
     - name: Commit changes
       run: |
         git add -f site/
-        git commit -m "Add downloaded CSV to the 'site' folder"
+        git commit -m "Add downloaded CSV to the 'site' folder y"
       
     - name: Push changes
       run: |
