--- a/.github/workflows/import3.yml
+++ b/.github/workflows/import3.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Commit changes
       run: |
         git add -f site/
-        git commit -m "Add downloaded CSV to the 'site' folder y"
+        git commit -m "Add downloaded CSV to the 'site' folder"
       
     - name: Push changes
       run: |
