--- a/.github/workflows/import0.yml
+++ b/.github/workflows/import0.yml
@@ -1,9 +1,7 @@
-name: Download CSV from Google Drive
+name: Download CSV Manual
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   download:
