--- a/.github/workflows/import3.yml
+++ b/.github/workflows/import3.yml
@@ -1,8 +1,7 @@
 name: Download CSV from Google Drive
 
 on:
-  schedule:
-    - cron: '30 22 * * *'
+  push:
 
 jobs:
   download:
@@ -10,10 +9,10 @@ jobs:
 
     steps:
     - name: Check out the code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v5
 
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
