שיפורים עבור SEO

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -62,3 +62,8 @@ collections:
   artists:
     output: true
     permalink: /artists/:name/
+    
+    
+plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
