--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,8 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 
-# baseurl: "/shir-bot" # החלף בנתיב הבסיסי שלך אם יש
-# url: "https://nhlocal.github.io" # URL האתר
+baseurl: "/shir-bot"
+url: "https://nhlocal.github.io"
 language: "he"
 
 title: Your awesome title
@@ -67,3 +67,10 @@ collections:
 plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
+
+
+seo:
+  title: "שיר-בוט"
+  description: "חיפוש חופשי והורדה בתוך מאגר של עשרות אלפי שירים..."
+  url: "https://nhlocal.github.io/shir-bot"
+  image: "/assets/images/logo.png"
