--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,3 +30,7 @@ seo:
   description: "חיפוש חופשי והורדה בתוך מאגר של עשרות אלפי שירים..."
   url: "https://nhlocal.github.io/shir-bot"
   image: "/assets/images/logo.png"
+
+
+# הגדרות לקבצי נתונים
+data_dir: _data
