--- a/.github/workflows/drive_sync.yml
+++ b/.github/workflows/drive_sync.yml
@@ -3,7 +3,7 @@ name: Sync Drive Shortcuts
 on:
   push:
     branches:
-      - main # שנה ל-master אם זה הענף הראשי שלך
+      - new-singles # שנה ל-master אם זה הענף הראשי שלך
     paths:
       # Trigger only when the Python script itself changes
       - 'creat-data/drive_shortcut_creator.py' 
