--- a/.github/workflows/drive_sync.yml
+++ b/.github/workflows/drive_sync.yml
@@ -36,7 +36,7 @@ jobs:
         GOOGLE_TOKEN_JSON: ${{ secrets.GOOGLE_TOKEN_JSON }}
 
     - name: Run the Python script
-      run: python drive_shortcut_creator.py 
+      run: python "creat-data/drive_shortcut_creator.py"
 
     - name: Clean up credential files 
       if: always() 
