--- a/.github/workflows/drive_sync.yml
+++ b/.github/workflows/drive_sync.yml
@@ -7,6 +7,7 @@ on:
     paths:
       # Trigger only when the Python script itself changes
       - 'creat-data/drive_shortcut_creator.py'
+      - '.github/workflows/drive_sync.yml'
 
 jobs:
   run-script:
