--- a/.github/workflows/drive_sync.yml
+++ b/.github/workflows/drive_sync.yml
@@ -6,8 +6,9 @@ on:
       - "new-singles" # שנה ל-master אם זה הענף הראשי שלך
     paths:
       # Trigger only when the Python script itself changes
-      - 'drive_shortcut_creator.py'
-      - '.github/workflows/drive_sync.yml'
+      - 'drive_shortcut_creator.py' 
+  # מאפשר הרצה ידנית דרך ממשק ה-Actions ב-GitHub (אופציונלי)
+  workflow_dispatch: 
 
 jobs:
   run-script:
@@ -23,24 +24,16 @@ jobs:
         python-version: '3.10' 
 
     - name: Install dependencies directly
-      # התקנת התלויות ישירות דרך pip במקום מקובץ requirements.txt
       run: |
         python -m pip install --upgrade pip
         pip install google-api-python-client google-auth-oauthlib google-auth-httplib2 certifi
 
-    - name: Create Google Credentials Files from Secrets
-      run: |
-        echo "${{ secrets.GOOGLE_CLIENT_SECRET_JSON }}" > client_secret_auth.json
-        echo "${{ secrets.GOOGLE_TOKEN_JSON }}" > token.json
+    # --- שלב יצירת הקבצים הוסר ---
+
+    - name: Run the Python script with Secrets as Env Vars
+      # הרצת הסקריפט כשהסודות זמינים כמשתני סביבה
+      run: python drive_shortcut_creator.py 
       env:
+        # חשוב: העברת הסודות למשתני סביבה שהסקריפט יקרא
         GOOGLE_CLIENT_SECRET_JSON: ${{ secrets.GOOGLE_CLIENT_SECRET_JSON }}
         GOOGLE_TOKEN_JSON: ${{ secrets.GOOGLE_TOKEN_JSON }}
-
-    - name: Run the Python script
-      run: python drive_shortcut_creator.py
-
-    - name: Clean up credential files 
-      if: always() 
-      run: |
-        rm -f client_secret_auth.json
-        rm -f token.json
