--- a/.github/workflows/process_drive.yml
+++ b/.github/workflows/process_drive.yml
@@ -3,14 +3,17 @@ name: Process New Drive Files and Update CSV
 on:
   push:
     branches:
+      # Adjust branch name if needed, e.g., 'main' or your feature branch
       - main
       - new-singles # Or keep the original branch if preferred
     paths:
-      # Trigger only if the script or workflow file changes
-      - 'process_drive_folder.py'
+      # --- UPDATED: Trigger if the script in its new location changes ---
+      - 'drive_data/process_drive_folder.py'
       - '.github/workflows/process_drive.yml'
-      # Optionally trigger if requirements change
+      # Optionally trigger if requirements change (still in root)
       - 'requirements.txt'
+      # Optionally trigger if data files change (already correct)
+      # - 'drive_data/**'
   workflow_dispatch: # Allows manual triggering
   schedule:
     # Runs daily at 4 AM UTC (adjust as needed, consider timezone of file uploads)
@@ -26,46 +29,35 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          # Fetch entire history for accurate change detection if needed,
-          # though fetching HEAD (depth 1) is usually fine for committing back.
-          fetch-depth: 0 # Use 0 if you need full history, 1 otherwise
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10' # Match Python version used for development/testing
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # Ensure requirements.txt includes:
-          # google-api-python-client
-          # google-auth-oauthlib
-          # google-auth-httplib2
-          # pyluach
-          # certifi
+          # Assumes requirements.txt is still in the root directory
           pip install -r requirements.txt
 
       - name: Authenticate Google Drive (Target Account)
         env:
-          # Script reads this environment variable for authentication credentials
           GDRIVE_TOKEN_JSON_CONTENT: ${{ secrets.GDRIVE_TOKEN_JSON }}
         run: |
-          # Check if the secret is provided
           if [ -z "$GDRIVE_TOKEN_JSON_CONTENT" ]; then
             echo "::error::GDRIVE_TOKEN_JSON secret is not set or empty. Authentication cannot proceed."
             exit 1
           else
             echo "Google Drive secret found. Proceeding..."
-            # Script handles reading the env var directly
           fi
 
       - name: Run Drive Processing Script
         env:
-          # Pass the secret content again (script expects it)
           GDRIVE_TOKEN_JSON_CONTENT: ${{ secrets.GDRIVE_TOKEN_JSON }}
-        # Make sure the python script filename matches
-        run: python process_drive_folder.py
+        # --- UPDATED: Run the script from its new location ---
+        run: python drive_data/process_drive_folder.py
 
       - name: Configure Git
         run: |
@@ -75,26 +67,22 @@ jobs:
       - name: Check for changes in state or csv file
         id: check_changes
         run: |
-          # Add the potentially modified/created state and csv files
-          # Use the NEW filenames defined in the python script
-          git add drive_state.json new-songs.csv
-          # Check if staging area is empty (no changes detected)
+          # Paths are already correct as they point into drive_data
+          git add drive_data/drive_state.json drive_data/new-songs.csv
           if git diff --staged --quiet; then
-            echo "No changes detected in drive_state.json or new-songs.csv."
+            echo "No changes detected in drive_data/drive_state.json or drive_data/new-songs.csv."
             echo "changed=false" >> $GITHUB_OUTPUT
           else
-            echo "Changes detected in drive_state.json or new-songs.csv."
+            echo "Changes detected in drive_data/drive_state.json or drive_data/new-songs.csv."
             echo "changed=true" >> $GITHUB_OUTPUT
           fi
 
       - name: Commit and push changes
         if: steps.check_changes.outputs.changed == 'true'
         run: |
-          # Commit the changes with a descriptive message
-          # Use the NEW filenames
-          git commit -m "Update drive_state.json and new-songs.csv from Drive processing [skip ci]"
+          # Commit message is already correct
+          git commit -m "Update drive_data/drive_state.json and drive_data/new-songs.csv from Drive processing [skip ci]"
 
-          # Add retry logic for push in case of transient network issues or conflicts
           retry_count=0
           max_retries=3
           until git pull --rebase && git push || [ $retry_count -eq $max_retries ]; do
@@ -103,12 +91,8 @@ jobs:
             sleep 15
           done
 
-          # Check if push failed after retries
           if [ $retry_count -eq $max_retries ]; then
             echo "::error::Failed to push changes after multiple retries. Please check for conflicts manually."
-            # Optionally fail the workflow
-            # exit 1
-            # OR just log error and continue (depends on desired behavior)
           else
             echo "Changes committed and pushed successfully."
           fi
