--- a/.github/workflows/process_drive.yml
+++ b/.github/workflows/process_drive.yml
@@ -13,8 +13,8 @@ on:
       - 'requirements.txt'
   workflow_dispatch:
   schedule:
-    # יומי ב-4:00 UTC
-    - cron: '45 23 * * *'
+    # יומי ב-0:00 שעון ישראל (UTC+3)
+    - cron: '00 21 * * *'
 
 permissions:
   contents: write # נדרש לביצוע commit חזרה לריפו
