--- a/.github/workflows/sync_inventory_convert.yml
+++ b/.github/workflows/sync_inventory_convert.yml
@@ -3,7 +3,8 @@ name: Sync Drive Inventory
 on:
   push:
     branches:
-      - main # Or your main development branch
+      - main
+      - new-singles
     paths:
       # UPDATED Python script name in trigger paths
       - 'drive_data/drive_sync_inventory.py'
