חיפוש והצגת שירים בנויה מחדש
קבלת שירים ישירות מהדרייב

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,3 +1,4 @@
+# File: Gemfile
 source "https://rubygems.org"
 # Hello! This is where you manage which Jekyll version is used to run.
 # When you want to use a different version, change it below, save the
@@ -33,11 +34,11 @@ gem "wdm", "~> 0.1", :platforms => [:mingw, :x64_mingw, :mswin]
 gem "http_parser.rb", "~> 0.6.0", :platforms => [:jruby]
 
 gem "logger"
-gem "csv"
+# gem "csv" # <-- אפשר להסיר אם לא משתמשים יותר ב-CSV בשום מקום אחר ברובי
 gem "ostruct"
 gem "base64"
 gem "jekyll-redirect-from"
-
+gem 'unf' # <-- הוספנו עבור הפלאגין
 
 gem 'jekyll-seo-tag'
 gem 'jekyll-sitemap'
