הפעלת בניית אתר מ-main

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -4,7 +4,8 @@ name: Build and Deploy Jekyll site from /docs folder to GitHub Pages
 on:
   push:
     branches:
-      - new-singles # רק הבראנץ' הזה יפעיל את ה-workflow
+      - main
+      - new-singles
 
   workflow_dispatch:
 
