בנייה אוטומטית לאחר עדכון שירים

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,12 +1,20 @@
 # שם ה-Workflow
-name: Build and Deploy Jekyll site from /docs folder to GitHub Pages
+name: Build and Deploy Jekyll site
 
 on:
+  # יופעל על כל push רגיל לענפים אלו (שלא מכיל [skip ci])
   push:
     branches:
       - main
       - new-singles
 
+  # יופעל כאשר אחד מ-workflows אלו יסתיים בהצלחה על הענפים main או new-singles
+  workflow_run:
+    workflows: ["Sync Drive Inventory", "Upload new singles to Drive"] # שמות ה-workflows המלאים
+    types: [completed] # הפעל כשהם סיימו (ניתן גם להשתמש ב-success אם רוצים רק בהצלחה מוחלטת)
+    branches: [main, new-singles] # הפעל רק אם ה-workflow המפעיל רץ על אחד מהענפים האלה
+
+  # השאר את האפשרות להפעלה ידנית
   workflow_dispatch:
 
 permissions:
