--- a/.github/workflows/process_drive.yml
+++ b/.github/workflows/process_drive.yml
@@ -17,7 +17,7 @@ on:
     - cron: '00 21 * * *'
 
 permissions:
-  contents: write # נדרש לביצוע commit חזרה לריפו
+  contents: write
 
 jobs:
   process-drive-files:
@@ -31,7 +31,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10' # או גרסת פייתון אחרת
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
