--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 # File: _config.yml
-baseurl: "/shir-bot"
-url: "https://nhlocal.github.io"
+baseurl: ""
+url: "https://shir-bot.ze-kal.top/"
 language: "he"
 
 title: Your awesome title
