--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,10 +1,8 @@
 # File: _config.yml
-baseurl: ""
-url: "https://shir-bot.ze-kal.top/"
+baseurl: "https://shir-bot.ze-kal.top/"
 language: "he"
 
-title: Your awesome title
-email: your-email@example.com
+title: "שיר בוט | חיפוש מתקדם והורדה של מוזיקה יהודית וחסידית"
 description: >-
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
