--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,6 @@
 # File: _config.yml
-baseurl: "https://shir-bot.ze-kal.top/"
+baseurl: ""
+url: "https://shir-bot.ze-kal.top"
 language: "he"
 
 title: "שיר בוט | חיפוש מתקדם והורדה של מוזיקה יהודית וחסידית"
