--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,8 +21,8 @@ plugins:
 
 seo:
   title: "שיר-בוט"
-  description: "חיפוש חופשי והורדה בתוך מאגר של עשרות אלפי שירים..."
-  url: "https://nhlocal.github.io/shir-bot"
+  description: "חיפוש חופשי והורדה בתוך מאגר של אלפי שירים..."
+  url: "https://shir-bot.ze-kal.top"
   image: "/assets/images/logo.png"
 
 data_dir: _data
