--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ baseurl: ""
 url: "https://shir-bot.ze-kal.top"
 language: "he"
 
-title: "שיר בוט | חיפוש מתקדם והורדה של מוזיקה יהודית וחסידית"
+title: "חיפוש מתקדם והורדה של מוזיקה יהודית וחסידית"
 description: >-
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
