עדכון קישורי אתר

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,8 +9,7 @@ description: >-
   מאגר ענק ועדכני של שירים, סינגלים, אלבומים ואמנים.
   מצאו את השיר הבא שלכם!
 
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  nhlocal
 
 theme: minima
 
