סנכרון אוטומטי ביום ראשון בלבד

--- a/.github/workflows/sync_inventory_convert.yml
+++ b/.github/workflows/sync_inventory_convert.yml
@@ -14,8 +14,8 @@ on:
       - 'requirements.txt'
   workflow_dispatch: # Allow manual trigger
   schedule:
-    # הפעלה כל יום שני וחמישי בשעה 1:00 שעון ישראל
-    - cron: '00 21 * * 1,4'
+    # הפעלה כל יום ראשון בשעה 1:00 שעון ישראל
+    - cron: '00 21 * * 0'
 
 permissions:
   contents: write # Required to commit changes back to the repo
