הוספת דף ארכיון, כפתורי מעבר פנימיים ועוד
- דף ארכיון
- הוספת חלוקה לדפי חודשים
- הוספת כפתורי מעבר לדף רשימת האמנים בדפי האמנים
- הוספת כפתורי מעבר לארכיון בדפי השירים החדשים
- ניסוח משופר לכפתורים ותוכן

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,6 +16,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-redirect-from
   - ./_plugins/artist_page_generator.rb
+  - ./_plugins/monthly_archive_generator.rb
 
 seo:
   title: "שיר-בוט - מאגר מוזיקה יהודית וחסידית"
