Add csv stdlib gem to fix Jekyll build on Ruby 3.4

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -34,7 +34,7 @@ gem "wdm", "~> 0.1", :platforms => [:mingw, :x64_mingw, :mswin]
 gem "http_parser.rb", "~> 0.6.0", :platforms => [:jruby]
 
 gem "logger"
-# gem "csv" # <-- אפשר להסיר אם לא משתמשים יותר ב-CSV בשום מקום אחר ברובי
+gem "csv"
 gem "ostruct"
 gem "base64"
 gem "jekyll-redirect-from"
